[package]
name = "cli-rain"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["env", "derive"] }
colored = "3.0.0"
crossterm = "0.28.1"
ctrlc = "3.4.5"
itertools = "0.14.0"
once_cell = "1.20.3"
rand = "0.9.0"
rayon = "1.10.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
